k8s/crud/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud
  labels:
    app: crud
spec:
  selector:
    matchLabels:
      app: crud
  template:
    metadata:
      labels:
        app: crud
    spec:
      containers:
        - name: crud
          image: marceloagmelo/java-crud:1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
