k8s/crud/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
  labels:
    app: crud
spec:
  type: ClusterIP
  selector:
    app: crud
  ports:
    - name: http
      port: 8080
      targetPort: 8080
